NAVAPP-368 Prevent home menu-item from shrinking on Firefox

--- a/navigation-application/projects/navapp/src/app/main-menu/components/main-menu.component.scss
+++ b/navigation-application/projects/navapp/src/app/main-menu/components/main-menu.component.scss
@@ -1,5 +1,5 @@
 /*
- * Copyright 2019 BloomReach. All rights reserved. (https://www.bloomreach.com/)
+ * Copyright 2019-2020 BloomReach. All rights reserved. (https://www.bloomreach.com/)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,6 +25,7 @@
   align-items: center;
   display: grid;
   height: $menu-top-item-height;
+  min-height: $menu-top-item-height;
 
   .mat-icon {
     color: $white;
